[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/startMenu.gd" type="Script" id=1]
[ext_resource path="res://Water.tscn" type="PackedScene" id=2]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="water" parent="." instance=ExtResource( 2 )]
show_behind_parent = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.496
anchor_top = 0.237
anchor_right = 0.496
anchor_bottom = 0.237
margin_left = -115.904
margin_top = -47.2
margin_right = 116.096
margin_bottom = 46.8
text = "Commencer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="."]
anchor_left = 0.494
anchor_top = 0.485
anchor_right = 0.494
anchor_bottom = 0.485
margin_left = -115.856
margin_top = -47.0
margin_right = 116.144
margin_bottom = 47.0
text = "Charger"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingsButton" type="Button" parent="."]
anchor_left = 0.496
anchor_top = 0.237
anchor_right = 0.496
anchor_bottom = 0.237
margin_left = -119.904
margin_top = 275.8
margin_right = 112.096
margin_bottom = 369.8
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="settingsButton" to="." method="_on_settingsButton_pressed"]
